--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg (Links to an external site.)">
-    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg (Links to an external site.)" alt="lion">
-    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg (Links to an external site.)" alt="lion" title="We're here to help you!">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion" title="We're here to help you!">
   </body>
 </html>
